Fix overlapping elements in service points selection. (#2946)

--- a/themes/finna2/less/finna/organisation-info.less
+++ b/themes/finna2/less/finna/organisation-info.less
@@ -310,6 +310,7 @@
                 clear: both;
 
                 .js-map-widget {
+                    z-index: 0;
                     height: 320px;
                     width: 100%;
                 }
